# fastapi_template

./: .pre-commit-config.yaml  README.md  pyproject.toml
config/: .env.dev  .env.staging  dev.env  logging.yaml  staging.env
src/api_server/: main.py  models.py  query.py  serve.py  settings.py  setup_logging.py
src/trainer/: train.py
src/utils/: __init__.py
tests/: test_utils.py
